# datafusion-flight-sql-server

./: Cargo.toml  README.md
.github/workflows/: docs.yml  test.yml
datafusion-flight-sql-server/: CHANGELOG.md  Cargo.toml  README.md
datafusion-flight-sql-server/examples/: bearer_auth_flight_sql.rs
datafusion-flight-sql-server/src/: config.rs  lib.rs  service.rs
datafusion-flight-sql-server/tests/: integration_test.rs  schema_metadata_test.rs  state_test.rs
