[workspace]
resolver = "2"

members = [
    "datafusion-flight-sql-server",
    "datafusion-flight-sql-table-provider",
]

[workspace.package]
version = "0.4.7"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/datafusion-contrib/datafusion-flight-sql-server"

[workspace.dependencies]
arrow = "54"
arrow-flight = { version = "54", features = ["flight-sql-experimental"] }
arrow-json = "54"
async-trait = "0.1.83"
datafusion = "46.0.1"
datafusion-federation = { version = "0.3.7" }
datafusion-substrait = "46.0.1"
futures = "0.3.31"
tokio = { version = "1.41", features = ["full"] }
tonic = { version = "0.12", features = [
    "tls",
    "transport",
    "codegen",
    "prost",
] }
