[workspace]
resolver = "2"

members = [
    "datafusion-flight-sql-server",
    "datafusion-flight-sql-table-provider",
]

[workspace.package]
version = "0.4.9"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/datafusion-contrib/datafusion-flight-sql-server"

[workspace.dependencies]
arrow = "55"
arrow-flight = { version = "55", features = ["flight-sql-experimental"] }
arrow-json = "55"
async-trait = "0.1.88"
datafusion = "47.0.0"
datafusion-federation = { version = "0.4.2" }
datafusion-substrait = "47.0.0"
futures = "0.3.31"
tokio = { version = "1.44", features = ["full"] }
tonic = { version = "0.12", features = [
    "tls",
    "transport",
    "codegen",
    "prost",
] }
