[workspace]
resolver = "2"

members = [
    "datafusion-flight-sql-server",
    "datafusion-flight-sql-table-provider",
]

[workspace.package]
version = "0.4.11"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/datafusion-contrib/datafusion-flight-sql-server"

[workspace.dependencies]
arrow = "56"
arrow-flight = { version = "56", features = ["flight-sql"] }
arrow-json = "56"
async-trait = "0.1.88"
datafusion = "50"
datafusion-federation = { version = "0.4.10" }
datafusion-substrait = "50"
futures = "0.3.31"
tokio = { version = "1.47", features = ["full"] }
tonic = { version = "0.13", features = ["transport", "codegen", "prost"] }
