[package]
name = "datafusion-flight-sql-server"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
description = "Datafusion flight sql server."

[lib]
name = "datafusion_flight_sql_server"
path = "src/lib.rs"

[features]
default = []
protoc = ["datafusion-substrait/protoc"]

[dependencies]
arrow-flight.workspace = true
arrow.workspace = true
datafusion-federation = { workspace = true, features = ["sql"] }
datafusion-substrait.workspace = true
datafusion.workspace = true
futures.workspace = true
log = "0.4"
once_cell = "1.21"
prost = "0.13"
tonic.workspace = true
async-trait.workspace = true
tonic-async-interceptor = "0.12.0"

[dev-dependencies]
tokio.workspace = true
datafusion-flight-sql-table-provider = { path = "../datafusion-flight-sql-table-provider" }
